--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+See the github wiki at https://github.com/ShoreTel-Inc/erld/wiki for documentation. 
+You can also check out the example code under the 'example' directory and run 'erld -h' for an explanation of parameters.
+
 To build and install from a clean checkout:
 
 	aclocal
