--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,2 @@
-Originall written by Sam Bobroff <sam@m5.net>
+Originally written by Sam Bobroff <sam@m5.net>
 Contributions from Bernard Duggan <bernie@m5.net>
